deps/src/NTL/src/CheckFeatures.log
*** CheckFeatures log ***
g++-7 -I../include -I. -fPIC -O3 -pthread -o TestGetTime TestGetTime.cpp GetTime1.cpp -lm
running
g++-7 -I../include -I. -fPIC -O3 -pthread -o TestGetPID TestGetPID.cpp GetPID1.cpp -lm
g++-7 -I../include -I. -fPIC -O3 -pthread CheckALIGNED_ARRAY.cpp -o CheckFeatures -lm
g++-7 -I../include -I. -fPIC -O3 -pthread CheckBUILTIN_CLZL.cpp -o CheckFeatures -lm
g++-7 -I../include -I. -fPIC -O3 -pthread CheckLL_TYPE.cpp -o CheckFeatures -lm
g++-7 -I../include -I. -fPIC -O3 -pthread CheckSSSE3.cpp -o CheckFeatures -lm
CheckSSSE3.cpp:10:2: error: #error "SSSE3 not supported"
 #error "SSSE3 not supported"
  ^~~~~
g++-7 -I../include -I. -fPIC -O3 -pthread CheckAVX.cpp -o CheckFeatures -lm
CheckAVX.cpp:9:2: error: #error "AVX not supported"
 #error "AVX not supported"
  ^~~~~
CheckAVX.cpp: In function ‘void fun(double*, const double*, const double*)’:
CheckAVX.cpp:27:9: warning: AVX vector return without AVX enabled changes the ABI [-Wpsabi]
    avec = _mm256_load_pd(a);
    ~~~~~^~~~~~~~~~~~~~~~~~~
g++-7 -I../include -I. -fPIC -O3 -pthread CheckPCLMUL.cpp -o CheckFeatures -lm
CheckPCLMUL.cpp:8:2: error: #error "PCLMUL not supported"
 #error "PCLMUL not supported"
  ^~~~~
g++-7 -I../include -I. -fPIC -O3 -pthread CheckAVX2.cpp -o CheckFeatures -lm
CheckAVX2.cpp:9:2: error: #error "AVX2 not supported"
 #error "AVX2 not supported"
  ^~~~~
CheckAVX2.cpp: In function ‘void fun(unsigned int*, const unsigned int*)’:
CheckAVX2.cpp:28:9: warning: AVX vector return without AVX enabled changes the ABI [-Wpsabi]
    avec = _mm256_loadu_si256((const __m256i *) a);
    ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
g++-7 -I../include -I. -fPIC -O3 -pthread CheckFMA.cpp -o CheckFeatures -lm
CheckFMA.cpp:10:2: error: #error "AVX2 with FMA not supported"
 #error "AVX2 with FMA not supported"
  ^~~~~
CheckFMA.cpp: In function ‘void fun(double*, const double*, const double*)’:
CheckFMA.cpp:29:9: warning: AVX vector return without AVX enabled changes the ABI [-Wpsabi]
    avec = _mm256_load_pd(a);
    ~~~~~^~~~~~~~~~~~~~~~~~~
g++-7 -I../include -I. -fPIC -O3 -pthread CheckAVX512F.cpp -o CheckFeatures -lm
CheckAVX512F.cpp:12:2: error: #error "AVX512F not supported"
 #error "AVX512F not supported"
  ^~~~~
CheckAVX512F.cpp:16:2: error: #error "AVX512F not supported"
 #error "AVX512F not supported"
  ^~~~~
CheckAVX512F.cpp: In function ‘void fun(double*, const double*, const double*)’:
CheckAVX512F.cpp:35:9: warning: AVX512F vector return without AVX512F enabled changes the ABI [-Wpsabi]
    avec = _mm512_load_pd(a);
    ~~~~~^~~~~~~~~~~~~~~~~~~
CheckAVX512F.cpp: In function ‘void fun1(double*, const long int*)’:
CheckAVX512F.cpp:46:51: warning: AVX vector return without AVX enabled changes the ABI [-Wpsabi]
    __m256i a = _mm256_load_si256((const __m256i*)p);
                                                   ^
g++-7 -I../include -I. -fPIC -O3 -pthread CheckCOPY_TRAITS1.cpp -o CheckFeatures -lm
g++-7 -I../include -I. -fPIC -O3 -pthread CheckCOPY_TRAITS2.cpp -o CheckFeatures -lm
g++-7 -I../include -I. -fPIC -O3 -pthread CheckCHRONO_TIME.cpp -o CheckFeatures -lm
g++-7 -I../include -I. -fPIC -O3 -pthread CheckMACOS_TIME.cpp -o CheckFeatures -lm
CheckMACOS_TIME.cpp: In function ‘int main()’:
CheckMACOS_TIME.cpp:26:15: error: ‘_ntl_GetWallTime’ was not declared in this scope
    double t = _ntl_GetWallTime( );
               ^~~~~~~~~~~~~~~~
g++-7 -I../include -I. -fPIC -O3 -pthread CheckPOSIX_TIME.cpp -o CheckFeatures -lm
